<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.t246osslab.easybuggy</groupId>
    <artifactId>easybuggy</artifactId>
    <version>1-SNAPSHOT</version>
    <packaging>war</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <easybuggy-port>8080</easybuggy-port>
        <jvm.args.perm.size>-XX:MaxPermSize=128m</jvm.args.perm.size>
        <jvm.args.gc.log.path>-Xloggc:logs/gc.log</jvm.args.gc.log.path>
        <jvm.args.print.heap.at.gc>-XX:+PrintHeapAtGC</jvm.args.print.heap.at.gc>
        <jvm.args.print.gc.details>-XX:+PrintGCDetails</jvm.args.print.gc.details>
        <jvm.args.print.gc.date.stamps>-XX:+PrintGCDateStamps</jvm.args.print.gc.date.stamps>
        <jvm.args.gc.log.file.rotation>-XX:+UseGCLogFileRotation</jvm.args.gc.log.file.rotation>
        <jvm.args.number.of.gc.log.files>-XX:NumberOfGCLogFiles=5</jvm.args.number.of.gc.log.files>
        <jvm.args.gc.log.file.size>-XX:GCLogFileSize=10M</jvm.args.gc.log.file.size>
    </properties>

    <profiles>
        <profile>
            <id>JDK8-Switch</id>
            <activation>
                <jdk>1.8</jdk>
            </activation>
            <properties>
                <jvm.args.perm.size>-XX:MaxMetaspaceSize=128m</jvm.args.perm.size>
                <jvm.args.gc.log.path>-Xloggc:logs/gc_%p_%t.log</jvm.args.gc.log.path>
            </properties>
        </profile>
        <profile>
            <id>JDK11-Switch</id>
            <activation>
                <jdk>11</jdk>
            </activation>
            <properties>
                <jvm.args.perm.size>-XX:MaxMetaspaceSize=128m</jvm.args.perm.size>
                <jvm.args.gc.log.path>-Xlog:gc*:logs/gc_%p_%t.log:time,level,tags:filecount=5,filesize=10M</jvm.args.gc.log.path>
                <jvm.args.print.heap.at.gc>-Dummy=Dummy</jvm.args.print.heap.at.gc>
                <jvm.args.print.gc.details>-Dummy=Dummy</jvm.args.print.gc.details>
                <jvm.args.print.gc.date.stamps>-Dummy=Dummy</jvm.args.print.gc.date.stamps>
                <jvm.args.gc.log.file.rotation>-Dummy=Dummy</jvm.args.gc.log.file.rotation>
                <jvm.args.number.of.gc.log.files>-Dummy=Dummy</jvm.args.number.of.gc.log.files>
                <jvm.args.gc.log.file.size>-Dummy=Dummy</jvm.args.gc.log.file.size>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <!-- List of dependencies as per original configuration -->
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>1.1.1</version>
                <executions>
                    <execution>
                        <id>enforce-java</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[3.0.0,)</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>[1.6,)</version>
                                    <message>[ERROR] OLD JDK [${java.version}] in use. EasyBuggy requires JDK 1.6 or later</message>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
                <version>6.1.6</version>
                <configuration>
                    <format>ALL</format>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <executions>
                    <execution>
                        <id>create-empty-directory-and-english-properties</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <tasks>
                                <mkdir dir="logs" />
                                <copy file="${basedir}/src/main/resources/messages_en.properties"
                                    tofile="${project.build.outputDirectory}/messages.properties" />
                                <copy file="${basedir}/src/main/resources/indexpage_en.properties"
                                    tofile="${project.build.outputDirectory}/indexpage.properties" />
                                <delete
                                    file="${project.build.outputDirectory}/org/t246osslab/easybuggy/core/utils/DeleteClassWhileMavenBuild.class" />
                            </tasks>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
